# AI.Model

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: retrain.yml
data/: sample_games.csv
src/nfl_model/: __init__.py  betting.py  cli.py  config.py  data.py  data_sources.py  dataset.py  features.py  ingest.py  model.py  pipeline.py
tests/: test_cli.py  test_dataset.py  test_ingest.py  test_pipeline.py
