[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-model"
version = "0.1.0"
description = "Predict NFL outcomes and surface potential value bets from historical data."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Codex Generated", email = "devnull@example.com"}
]
dependencies = [
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.4,<2.0",
  "joblib>=1.3,<2.0",
  "typer>=0.9,<0.12",
  "pyyaml>=6.0,<7.0",
  "requests>=2.31,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1,<9.0",
  "pytest-cov>=4.1,<5.0"
]

[project.scripts]
nfl-model = "nfl_model.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
